# platzi-embeddings

./: .gitignore  README.md  config.py  environment.yml  paths.py  pyproject.toml  requirements.txt
notebooks/: template_1_sentence_similarity.ipynb  template_2_distances.ipynb  template_3_embeddings_gensim_dataset.ipynb  template_4_sentence_transformers.ipynb  template_5_embeddings_openai.ipynb  template_6_bases_de_datos_vectoriales.ipynb  template_6_proyecto_search_embeddings.ipynb
references/: notebook_1_sentence_similarity.ipynb  notebook_2_distances.ipynb  notebook_3_embeddings_gensim_dataset.ipynb  notebook_4_sentence_transformers.ipynb  notebook_5_embeddings_openai.ipynb  notebook_6_bases_de_datos_vectoriales.ipynb  proyecto_search_embeddings.ipynb
