[project]
name = "platzi-embeddings"
version = "0.1.0"
description = "Embeddings and Vector Store"
authors = [{ name = "Jason", email = "jasonssdev@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers",
    "notebook",
    "jupyterlab",
    "ipywidgets",
    "numpy",
    "pandas",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
